Make FAT/Windows support configurable
Windows support was on by default; this resulted in inferior behaviour when both filesystems were native Linux; FAT/Windows support can now be disabled through configuration.

--- a/templates/vagrant.prf.j2
+++ b/templates/vagrant.prf.j2
@@ -23,7 +23,7 @@ nodeletionpartial = BelowPath .ssh -> {{ unison_src_root }}
 noupdatepartial = Path .ssh/authorized_keys -> {{ unison_src_root }}
 
 # Make it work with limitations of Windows file system
-fat = true
+fat={{ unison_fat | bool | ternary('true', 'false') }}
 
 # Don't ask for confirmation for non-conflicting files
 auto=true
