Make unison service configurable
You can now enable the service to auto-start.

--- a/templates/unison.service.j2
+++ b/templates/unison.service.j2
@@ -2,7 +2,8 @@
 
 [Unit]
 Description=Unison file-synchronizer
-After=multi-user.target
+Requires=local-fs.target
+After=local-fs.target
 
 [Service]
 Environment="PATH=/usr/bin"
